--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -15,7 +15,7 @@ h1 {
 
 h2 {
 	color: white;
-	font-family: Rock Salt;
+	font-family: /*Rock Salt*/ Do Hyeon;
 }
 
 h3 {
@@ -260,8 +260,8 @@ html {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	text-decoration: none;
-	font-size: 16px;
-	font-family: Rock Salt;
+	font-size: /*16px*/ 24px;
+	font-family: /*Rock Salt*/ Do Hyeon;
 	/*border-right-style: solid;
 	border-right-width: 1px;*/
 }
