--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -22,6 +22,7 @@ h3 {
 	color: white;
 	font-family: /*Rock Salt Arial*/ Do Hyeon, sans-serif;
 	/*display: inline;*/
+	font-size: 16pt;
 }
 
 h4, h5 {
