--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -32,6 +32,7 @@
 			
 			<p>Please check out RockSoc on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a> for the most up-to-date information.<br></p>
 			
+			<div class="mobile_hide">
 			<div class="side_title_backing" style="width:40%">
 				<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="" class="paragraph_link">WAKE UP SCREAMING</a></p>
 			</div>
@@ -57,6 +58,7 @@
 			</div>
 			
 			<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then contact the webmaster to have it added.</p>
+			</div>
 			
 			<!--<img src="{% static 'pages/images/.png' %}" style="width:100%">-->
 			
