--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -17,7 +17,7 @@
 				</div>-->
 			
 			<div class="side_title_backing">
-				<h3 class="main_welcome_heading">WELCOME TO CAMBRIDGE ROCKSOC!</h3>
+				<h3 class="main_welcome_heading">!</h3>
 			</div>
 			
 			<!--<h3>WELCOME TO CAMBRIDGE ROCKSOC!</h3>-->
@@ -33,31 +33,31 @@
 			<p>Please check out RockSoc on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a> for the most up-to-date information.<br></p>
 			
 			<div class="mobile_hide">
-			<div class="side_title_backing" style="width:40%">
-				<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="" class="paragraph_link">WAKE UP SCREAMING</a></p>
-			</div>
-			
-			<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. If you are interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
+				<div class="side_title_backing" style="width:40%">
+					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="" class="paragraph_link">WAKE UP SCREAMING</a></p>
+				</div>
+				
+				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. If you are interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
 
-			<!--<p><a href="/events">Pub meets</a></p>-->
-			
-			<div class="side_title_backing" style="width:40%">
-				<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">PUB MEETS</a></p>
-			</div>
-			
-			<p>We meet weekly on a Thursday at a random pub in Cambridge, hailed as “RockSoc on tour”. To find out where our next pub meet is, keep an eye on the events page.</p>
-			
-			<div class="side_title_backing" style="width:40%">
-				<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">GIGS</a></p>
-			</div>
-			
-			<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>
+				<!--<p><a href="/events">Pub meets</a></p>-->
+				
+				<div class="side_title_backing" style="width:40%">
+					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">PUB MEETS</a></p>
+				</div>
+				
+				<p>We meet weekly on a Thursday at a random pub in Cambridge, hailed as “RockSoc on tour”. To find out where our next pub meet is, keep an eye on the events page.</p>
+				
+				<div class="side_title_backing" style="width:40%">
+					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">GIGS</a></p>
+				</div>
+				
+				<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>
 
-			<div class="side_title_backing" style="width:40%">
-				<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">OTHER EVENTS</a></p>
-			</div>
-			
-			<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then contact the webmaster to have it added.</p>
+				<div class="side_title_backing" style="width:40%">
+					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">OTHER EVENTS</a></p>
+				</div>
+				
+				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then contact the webmaster to have it added.</p>
 			</div>
 			
 			<!--<img src="{% static 'pages/images/.png' %}" style="width:100%">-->
