--- a/website/pages/templates/pages/base.html
+++ b/website/pages/templates/pages/base.html
@@ -38,12 +38,14 @@
 				<!--<div class = "join">
 					<p align="right">Join us on Facebook</p>
 				</div>-->
-				<div class="social_media">
+				
+				<!--<div class="social_media mobile_hide">
 					<a href="https://www.facebook.com/groups/camrocksoc/">
 						<img class="fb_logo" src="{% static 'pages/images/fb_black.png' %}" alt="Facebook logo">
 					</a>
-				</div>
+				</div>-->
 			</div>
+			
 			<div class="topnav">
 				<a class="page_link" href="/">Home</a>
 				<a class="page_link" href="/about">About</a>
