--- a/website/pages/templates/pages/event_detail.html
+++ b/website/pages/templates/pages/event_detail.html
@@ -48,7 +48,7 @@
 							<p>{{ event.event_info | linebreaksbr | urlize }}</p></td>
 						</tr>
 					</table>-->
-					<p>Link to Facebook event: {{ event.link_to_Facebook_event | urlize }}</p><br>
+					<p>Click <a href="{{ event.link_to_Facebook_event }}">here</a> for the Facebook event.</p><br>
 					<h3>Details:</h3>
 					<p>{{ event.event_info | linebreaksbr | urlize }}</p></td>
 			
