Static files added

--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -5,7 +5,7 @@
 	<div class="container index">
 		<div class="content welcome">
 			
-			<div class="slideshow">
+			<div class="slideshow mobile_hide">
 				<img src="{% static 'pages/images/panda.jpg' %}"  style="width:100%">
 			</div>
 			
