--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -207,7 +207,7 @@ html {
 	display: grid;
 	display: -ms-grid;
 	}
-	
+
 .content {
 	/*background-color: rgba(0,0,0,0.7);*/
 	background-image: url("images/fabric.png");
@@ -217,10 +217,27 @@ html {
 	border-color: white;
 	border-width: 0px;
 	/*padding: 40px;*/
-	padding-left: 40px;
-	padding-right: 40px;
-	padding-top: 20px;
-	padding-bottom: 40px;
+	padding-left: 6%;
+	padding-right: 6%;
+	padding-top: 3%;
+	padding-bottom: 3%;
+}
+
+@media screen and (max-width:900px) {
+	.content {
+		/*background-color: rgba(0,0,0,0.7);*/
+		background-image: url("images/fabric.png");
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		border-style: solid;
+		border-color: white;
+		border-width: 0px;
+		/*padding: 40px;*/
+		/*padding-left: 40px;
+		padding-right: 40px;
+		padding-top: 20px;
+		padding-bottom: 40px;*/
+	}
 }
 	
 .content_big {
@@ -231,10 +248,10 @@ html {
 	border-style: solid;
 	border-color: white;
 	border-width: 0px;
-	padding-left: 40px;
-	padding-right: 40px;
-	padding-top: 20px;
-	padding-bottom: 40px;
+	padding-left: 4%;
+	padding-right: 4%;
+	padding-top: 3%;
+	padding-bottom: 3%;
 }
 
 /*.index {
@@ -268,9 +285,11 @@ html {
 
 @media screen and (min-width: 600px) {
 	.mobile_hide {
-		display: inline;
+		display: block;
 	}
 }
+
+
 
 @media screen and (min-width: 900px) {
 	.index {
@@ -286,11 +305,19 @@ html {
 		-ms-grid-column: 1;
 		grid-row: 1 / 3;
 		-ms-grid-row-span: 2;
+		padding-left: 6%;
+		padding-right: 6%;
+		padding-top: 3%;
+		padding-bottom: 3%;
 	}
 		
 	.upcoming_events {
 		grid-column: 2;
 		-ms-grid-column: 2;
+		padding-left: 8%;
+		padding-right: 8%;
+		padding-top: 3%;
+		padding-bottom: 3%;
 	}
 			
 	.news {
@@ -298,6 +325,10 @@ html {
 		-ms-grid-column: 2;
 		grid-row: 2;
 		-ms-grid-row: 2;
+		padding-left: 8%;
+		padding-right: 8%;
+		padding-top: 3%;
+		padding-bottom: 3%;
 	}
 }
 
@@ -484,9 +515,9 @@ table#event_list:hover {
 	height: 290px;
 	overflow: hidden;
 	border: 1px solid gray;
-	margin-top: 20px;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-top: 3%;
+	margin-left: 1%;
+	margin-right: 1%;
 	/*padding-top: 20px;*/
 	/*height: 280px;*/
 	/*box-shadow: 0px 0px 5px 1px gray;*/
