--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -17,7 +17,7 @@
 				</div>-->
 			
 			<div class="side_title_backing">
-				<h3 class="main_welcome_heading">W</h3>
+				<h3 class="main_welcome_heading">WELCOME TO CAMBRIDGE ROCKSOC!</h3>
 			</div>
 			
 			<!--<h3>WELCOME TO CAMBRIDGE ROCKSOC!</h3>-->
