--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -5,7 +5,7 @@
 	<div class="container index">
 		<div class="content welcome">
 			
-			<div class="slideshow mobile_hide">
+			<div class="slideshow mobile_hide_600">
 				<img src="{% static 'pages/images/panda.jpg' %}"  style="width:100%">
 			</div>
 			
@@ -32,7 +32,7 @@
 			
 			<p>Please check out RockSoc on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a> for the most up-to-date information.<br></p>
 			
-			<div class="mobile_hide">
+			<div class="mobile_hide_600">
 				<div class="side_title_backing" style="width:40%">
 					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="" class="paragraph_link">WAKE UP SCREAMING</a></p>
 				</div>
