--- a/website/pages/templates/pages/about.html
+++ b/website/pages/templates/pages/about.html
@@ -10,14 +10,20 @@
 				<h1 style="padding-top:12px;padding-bottom:12px;padding-left:30px">ABOUT</h1>
 			</div>
 			
-			<img src="{% static 'pages/images/panda.jpg' %}" style="width:45%;border:1px solid gray;margin: 20px 20px" align="right">
+			<div class="mobile_hide_800">
+				<img class="about_img" src="{% static 'pages/images/robfest.jpg' %}" align="right">
+			</div>
 			
 			<h3>What is Cambridge RockSoc?</h3>
 			<p>RockSoc is Cambridge's rock, metal, and alternative society!</p>
 			<p>Our aim is to bring together people interested in rock, metal and alternative music, and to support the alternative scene in Cambridge. To this end we run a 
 			monthly club night: Wake Up Screaming, organise at least one live gig per term, and have weekly pub meets to socialise. We may also organise other events such as 
 			trips to gigs elsewhere, and we attempt to keep a comprehensive record of all rock, metal, and alternative events happening in Cambridge.</p>
-
+			
+			<div class="mobile_show_800">
+				<img class="about_img" src="{% static 'pages/images/robfest.jpg' %}" align="right">
+			</div>
+			
 			<h3>Who can join?</h3>
 			<p>Anyone can join and take advantage of what we offer. We are officially a Cambridge University society, but this has no bearing on our members; if it did we would 
 			go independent!</p>
