--- a/website/pages/templates/pages/about.html
+++ b/website/pages/templates/pages/about.html
@@ -7,7 +7,7 @@
 		<div class="content_big">
 			
 			<div class="side_title_backing_big" style="width:100%">
-				<h1 style="padding-top:12px;padding-bottom:12px;padding-left:30px">ABOUT</h1>
+				<h1 class="page_title">ABOUT</h1>
 			</div>
 			
 			<div class="mobile_hide_800">
@@ -24,15 +24,28 @@
 				<img class="about_img" src="{% static 'pages/images/robfest.jpg' %}" align="right">
 			</div>
 			
-			<h3>Who can join?</h3>
-			<p>Anyone can join and take advantage of what we offer. We are officially a Cambridge University society, but this has no bearing on our members; if it did we would 
-			go independent!</p>
-
 			<h3>What music do we cover?</h3>
 			<p>Our music tastes evolve with our members, but we try to cater for alternative music not covered elsewhere in Cambridge. The spectrum of interests in RockSoc ranges 
 			from <i>Grunge</i> to <i>Alternative</i> to <i>Classic Metal</i> to <i>70s Rock</i> to <i>Death</i> and <i>Black Metal</i> to <i>Hardcore</i> to <i>Punk</i> to 
 			<i>Grindcore</i> to <i>Goth</i> to <i>Industrial</i> and takes in a good few others along the way, so the chances are that whatever you like there'll be someone in 
 			RockSoc who agrees with you!</p>
+			
+			<h3>Who can join?</h3>
+			<p>Anyone can join and take advantage of what we offer. We are officially a Cambridge University society, but this has no bearing on our members; if it did we would 
+			go independent!</p>
+			
+			<h3>How can I join?</h3>
+			<p>Joining is cheap and easy! Membership is £5 for life (quite literally) and gets you the following benefits:</p>
+			
+			<ul style="color:gray;list-style-type:disc">
+				<li>cheaper entry to Wake Up Screaming (£3 instead of £4)</li>
+				<li>cheaper entry to all of our gigs (typically £1 off)</li>
+				<li>a vote at the RockSoc AGM</li>
+				<li>reduced prices at other rock-related events in Cambridge where we can arrange it</li>
+				<li>your very own RockSoc membership card, making you the envy of all your friends!</li>
+			</ul>
+			
+			<p>To join, turn up to one of our events and speak to a member of the committee who will be able to assist.</p>
 
 		</div>
 	</div>
