--- a/website/pages/templates/pages/base.html
+++ b/website/pages/templates/pages/base.html
@@ -52,7 +52,7 @@
 				<a class="page_link" href="/events">Events</a>
 				<a class="page_link" href="/news">News</a>
 				<!--<a class="page_link" href="">Stash</a>-->
-				<a class="page_link" href="/membership">Membership</a>
+				<a class="page_link" href="/wus">WUS</a>
 				<a class="page_link" href="/quote">Quote!</a>
 				<a class="page_link" href="/gallery">Gallery</a>
 				<a class="page_link" href="/committee">Committee</a>
