--- a/website/pages/templates/pages/events.html
+++ b/website/pages/templates/pages/events.html
@@ -14,7 +14,7 @@
 				</div>-->
 				
 				<div class="side_title_backing_big" style="width:100%">
-					<h1 style="padding-top:12px;padding-bottom:12px;padding-left:30px">EVENTS</h1>
+					<h1 class="page_title">EVENTS</h1>
 				</div>
 				
 				<p>Below are listings of all alternative events we know about in Cambridge. If you know of an event not on this list, or are organising one, then contact the webmaster to have it added.</p>
