--- a/website/pages/templates/pages/news.html
+++ b/website/pages/templates/pages/news.html
@@ -7,10 +7,10 @@
 		<div class="content_big">
 		
 			<div class="side_title_backing_big" style="width:100%">
-				<h1 style="padding-top:12px;padding-bottom:12px;padding-left:30px">NEWS</h1>
+				<h1 class="page_title">NEWS</h1>
 			</div>
 			
-			<p>The website is currently under refurbishment :)</p>
+			<p>Here you can find out about some of the goings-on in RockSoc. For the most up-to-date information join us on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook!</a></p>
 			
 		</div>
 	</div>
