--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -6,8 +6,8 @@
 	<div class="container">
 		<div class="content_big">
 		
-			<div class="side_title_backing_big" style="width:100%">
-				<h1 style="padding-top:12px;padding-bottom:12px;padding-left:30px">MEMBERSHIP</h1>
+			<div class="side_title_backing_wus" style="width:100%">
+				<h1 class="page_title">WAKE UP SCREAMING</h1>
 			</div>
 			
 			<p>The website is currently under refurbishment :)</p>
