--- a/website/pages/templates/pages/committee.html
+++ b/website/pages/templates/pages/committee.html
@@ -7,7 +7,7 @@
 		<div class="content_big">
 		
 			<div class="side_title_backing_big" style="width:100%">
-				<h1 style="padding-top:12px;padding-bottom:12px;padding-left:30px">COMMITTEE</h1>
+				<h1 class="page_title">COMMITTEE</h1>
 			</div>
 			
 			<p>Yes, RockSoc has a committee. At some point they'll be put here...</p>
