--- a/website/pages/templates/pages/quote.html
+++ b/website/pages/templates/pages/quote.html
@@ -7,7 +7,7 @@
 		<div class="content_big">
 		
 			<div class="side_title_backing_big" style="width:100%">
-				<h1 style="padding-top:12px;padding-bottom:12px;padding-left:30px">QUOTE!</h1>
+				<h1 class="page_title">QUOTE!</h1>
 			</div>
 			
 			<p>The website is currently under refurbishment :)</p>
