--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -16,8 +16,8 @@
 					<img src="{% static 'pages/images/fun.jpg' %}" style="width:100%">
 				</div>-->
 			
-			<div class="side_title_backing">
-				<h3 class="main_welcome_heading">WELCOME TO ROCKSOC!</h3>
+			<div class="side_title_backing_welcome">
+				<h3 class="main_welcome_heading">WELCOME TO CAMBRIDGE ROCKSOC!</h3>
 			</div>
 			
 			<!--<h3>WELCOME TO CAMBRIDGE ROCKSOC!</h3>-->
