--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -32,9 +32,9 @@
 			
 			<p>Please check out RockSoc on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a> for the most up-to-date information.<br></p>
 			
-			<div class="mobile_hide_600">
-				<div class="side_title_backing" style="width:40%">
-					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="" class="paragraph_link">WAKE UP SCREAMING</a></p>
+			<!--<div class="mobile_hide_600">-->
+				<div class="side_title_backing_wus_small" style="width:40%">
+					<p class="sub_heading_welcome"><a href="" class="paragraph_link">WAKE UP SCREAMING</a></p>
 				</div>
 				
 				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. If you are interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
@@ -58,7 +58,7 @@
 				</div>
 				
 				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then contact the webmaster to have it added.</p>
-			</div>
+			<!--</div>-->
 			
 			<!--<img src="{% static 'pages/images/.png' %}" style="width:100%">-->
 			
