--- a/website/pages/templates/pages/event_detail.html
+++ b/website/pages/templates/pages/event_detail.html
@@ -89,7 +89,7 @@
 				</div>
 			</div>
 			
-			<p>Click <a href="{{ event.link_to_Facebook_event }}">here</a> for the Facebook event.</p><br>
+			<p>Click <a class="paragraph_link" href="{{ event.link_to_Facebook_event }}">here</a> for the Facebook event.</p><br>
 			
 			<h3>Details:</h3>
 			<p class="break_all">{{ event.event_info | linebreaksbr | urlize }}</p></td>
